@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-06
+2012-09-11 Andy Salnikov
+- DdlPythonInterfaces: generated stuff goes to a separate namespace
+
 Tag: V00-02-05
 2012-07-27 Andy Salnikov
 - XmlReader: elementTree in 2.7 comes from xml package, make imports
